tests/cases/ffi/ok/ffi-c-puts.ari
extern "C" fn puts(text: string) -> i32;

fn main() -> i64 {
  puts("ffi-c-ok");
  return 0;
}

