tests/cases/ffi/errors/extern-body.ari
extern "C" fn nope() -> i64 {
  return 1;
}

fn main() -> i64 {
  return 0;
}

